--- a/lang/ja.json
+++ b/lang/ja.json
@@ -340,7 +340,7 @@
   "desc_tree": "IIIFコレクションの階層に沿ってアイテムを閲覧する。",
   "_label": "label",
   "manifest": "Manifest",
-  "entity": "事物",
+  "entity": "エンティティ",
   "random": "ランダム",
   "property_name": "プロパティ名",
   "property_description": "説明",
@@ -502,5 +502,9 @@
   "共起頻度": "共起頻度",
   "出現頻度": "出現頻度",
   "可視化例 1": "可視化例 1",
-  "可視化例 2": "可視化例 2"
+  "可視化例 2": "可視化例 2",
+  "item": "アイテム",
+  "object": "オブジェクト",
+  "オブジェクト検索": "オブジェクト検索",
+  "カテゴリ（オブジェクト）": "カテゴリ（オブジェクト）"
 }
