feat: add trans

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -367,7 +367,7 @@
   "contact_information": "連絡先",
   "updates": "更新情報",
   "members": "メンバー",
-  "try_out": "試してみる",
+  "try_out": "資料を見る",
   "Page": "ページ",
   "Order": "順序",
   "manual": "マニュアル",
