--- a/lang/ja.json
+++ b/lang/ja.json
@@ -59,7 +59,7 @@
   "detail": "詳細検索",
   "next": "次のアイテム",
   "previous": "前のアイテム",
-  "category": "カテゴリ",
+  "category": "統計",
   "about_": "このサイトについて",
   "cite_this_item": "このアイテムを引用する",
   "share": "共有",
@@ -340,7 +340,7 @@
   "desc_tree": "IIIFコレクションの階層に沿ってアイテムを閲覧する。",
   "_label": "label",
   "manifest": "Manifest",
-  "entity": "エンティティ",
+  "entity": "固有表現",
   "random": "ランダム",
   "property_name": "プロパティ名",
   "property_description": "説明",
@@ -386,12 +386,12 @@
   "東京大学史料編纂所": "東京大学史料編纂所",
   "前近代日本史情報国際センター": "前近代日本史情報国際センター",
   "network": "ネットワーク",
-  "タイトルが似ているアイテム": "メタデータが似ているアイテム",
+  "タイトルが似ているアイテム": "内容が似ている資料",
   "関連する事物": "関連する事物",
   "ノードをダブルクリックすることで、当該事物のページに遷移します。": "ノードをダブルクリック、またはノードを選択後に検索ボタンをクリックすることで、当該事物のネットワークを追加します。関連度には、各アイテムにおける事物の共起頻度を用いています。",
   "データ駆動型検索プロトタイプ": "データ駆動型検索プロトタイプ",
   "関連するアイテム": "関連するアイテム",
-  "画像が似ているアイテム": "画像が似ているアイテム",
+  "画像が似ているアイテム": "見た目が似ている資料",
   "tempo": "時間",
   "フォーカス": "フォーカス",
   "attribution": "所蔵・所在",
@@ -503,8 +503,10 @@
   "出現頻度": "出現頻度",
   "可視化例 1": "可視化例 1",
   "可視化例 2": "可視化例 2",
-  "item": "アイテム",
-  "object": "オブジェクト",
-  "オブジェクト検索": "オブジェクト検索",
-  "カテゴリ（オブジェクト）": "カテゴリ（オブジェクト）"
+  "item": "貼り込み資料",
+  "object": "機械タグ",
+  "オブジェクト検索": "機械タグ検索",
+  "カテゴリ（オブジェクト）": "カテゴリ（オブジェクト）",
+  "stats": "統計",
+  "score": "スコア"
 }
