--- a/lang/ja.json
+++ b/lang/ja.json
@@ -514,5 +514,6 @@
   "object_detection": "物体検出",
   "similar_search": "類似画像検索",
   "api": "API",
-  "upload": "アップロード"
+  "upload": "アップロード",
+  "reuse": "利用条件"
 }
