feat: update example

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -515,5 +515,11 @@
   "similar_search": "類似画像検索",
   "api": "API",
   "upload": "アップロード",
-  "reuse": "利用条件"
+  "reuse": "利用条件",
+  "場所": "場所",
+  "組織": "組織",
+  "電子展示『捃拾帖』（拡張版）": "電子展示『捃拾帖』（拡張版）",
+  "田中芳男・博物学コレクション": "田中芳男・博物学コレクション",
+  "その他の検索": "その他の検索",
+  "ID": "ID"
 }
