--- a/lang/en.json
+++ b/lang/en.json
@@ -501,5 +501,12 @@
   "similar_search": "Similar Image Searach",
   "api": "API",
   "upload": "Upload",
-  "reuse": "Reuse"
+  "reuse": "Reuse",
+  "場所": "Place",
+  "組織": "Organization",
+  "電子展示『捃拾帖』（拡張版）": "Digital Exhibition \"Kunshujo\" - Advanced",
+  "田中芳男・博物学コレクション": "田中芳男・博物学コレクション",
+  "その他の検索": "Other",
+  "ID": "ID",
+  "東京大学附属図書館　学術資産アーカイブ化推進室": "UTokyo Academic Archives Project Office（General Affairs Division, University of Tokyo Library System)"
 }
