--- a/lang/ja.json
+++ b/lang/ja.json
@@ -521,5 +521,6 @@
   "電子展示『捃拾帖』（拡張版）": "電子展示『捃拾帖』（拡張版）",
   "田中芳男・博物学コレクション": "田中芳男・博物学コレクション",
   "その他の検索": "その他の検索",
-  "ID": "ID"
+  "ID": "ID",
+  "東京大学附属図書館　学術資産アーカイブ化推進室": "東京大学附属図書館　学術資産アーカイブ化推進室"
 }
