--- a/lang/en.json
+++ b/lang/en.json
@@ -508,5 +508,6 @@
   "田中芳男・博物学コレクション": "田中芳男・博物学コレクション",
   "その他の検索": "Other",
   "ID": "ID",
-  "東京大学附属図書館　学術資産アーカイブ化推進室": "UTokyo Academic Archives Project Office（General Affairs Division, University of Tokyo Library System)"
+  "東京大学附属図書館　学術資産アーカイブ化推進室": "UTokyo Academic Archives Project Office（General Affairs Division, University of Tokyo Library System)",
+  "上位アイテム": "Parent"
 }
