--- a/lang/ja.json
+++ b/lang/ja.json
@@ -522,5 +522,6 @@
   "田中芳男・博物学コレクション": "田中芳男・博物学コレクション",
   "その他の検索": "その他の検索",
   "ID": "ID",
-  "東京大学附属図書館　学術資産アーカイブ化推進室": "東京大学附属図書館　学術資産アーカイブ化推進室"
+  "東京大学附属図書館　学術資産アーカイブ化推進室": "東京大学附属図書館　学術資産アーカイブ化推進室",
+  "上位アイテム": "上位アイテム"
 }
